--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: node_js
 node_js:
+  - "0.10"
+  - "0.12"
+  - "4"
   - "6"
-  - "5"
+
+# Use faster Docker architecture on Travis.
+sudo: false
+
+script:        npm test
